Alterando código do curso
Alterando código feito durante aula do curso, alinhando itens de navegação do botão hambuger para a direita, e refazendo rodapé da página de forma mais otimizada.

--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!-- Meu código modoficado-->
+<!-- Código original do curso-->
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -165,28 +165,28 @@
 
     <footer class="mt-4 mb-4">
       <div class="container">
+          <div class="row">
+            <div class="col-md-8 d-flex justify-content-start">
+                <p>
+                  <a href="">Home</a>
+                  <a href="">Recursos</a>
+                  <a href="">Benefícios</a>
+                  <a href="">Preço</a>
+                </p>
 
-        <ul class="list-unstyled d-flex align-items-center">
-          <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Recursos</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Benefícios</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Preço</a></li>
-          <li class="nav-item ml-auto">
-            <a href="" class="btn btn-outline-dark ml-1">
-              <i class="fab fa-facebook"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="btn btn-outline-dark ml-1">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="btn btn-outline-dark ml-1">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </li>
-        </ul>
+            </div>
+            <div id="footer-btn" class="col-md-4 d-flex justify-content-end align-items-center">
+              <a href="" class="btn btn-outline-dark btn-sm ml-2">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="" class="btn btn-outline-dark btn-sm ml-2">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="" class="btn btn-outline-dark btn-sm ml-2">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </div>
+          </div>
       </div>
     </footer>
 
